--- a/game_page.html
+++ b/game_page.html
@@ -11,30 +11,25 @@
 </head>
 <body>
 
-	<!-- Adicionar a tag h4 que será usada para conter o nome do jogador1 e uma tag span será usada para manter a pontuação do jogador1-->
-	
-	<br>
+<h4 id="player1_name"></h4> <span id="player1_score"></span>
+<br>
+<h4 id="player2_name"></h4> <span id="player2_score"></span>
 
-	<!-- Adicionar a tag h4 que será usada para conter o nome do jogador2 e uma tag span será usada para manter a pontuação do jogador2-->
-
-
-	<div class="container">
-		<center>
-			<h2 style="color: white;">Quiz de Matemática!</h2>
-			<h3 id="player_question"></h3>
-			<h3 id="player_answer"></h3>
-			<div id="output" class="col-lg-6"> </div>
-			<br>
-			<br>
-			<h4>Número 1</h4>
-			<input type="text" id="number1" class="form-control" placeholder="Número 1">
-			<br>
-			<h4>Número 2</h4>
-			<input type="text" id="number2" class="form-control" placeholder="Número 2">
-			<br>
-
-		<!-- Adicionar o botão Enviar -->
-		
+<div class="container">
+	<center>
+		<h2 style="color: white;">Quiz de Matemática!</h2>
+		<h3 id="player_question"></h3>
+		<h3 id="player_answer"></h3>
+		<div id="output" class="col-lg-6"> </div>
+		<br>
+		<br>
+		<h4>Número 1</h4>
+		<input type="text" id="number1" class="form-control" placeholder="Número 1">
+		<br>
+		<h4>Número 2</h4>
+		<input type="text" id="number2" class="form-control" placeholder="Número 2">
+		<br>
+		<button onclick="send()" class="btn btn-success" style="width: 30%;">Enviar</button>
 	</center>
 </div>
 
